--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@
 }
 
 .backBanner {
-  margin-top: 10vh;
+  margin-top: 5vh;
   max-width: 1240px;
   position: relative;
 }
@@ -48,30 +48,43 @@
 }
 
 .cardsContainer {
-  max-width: 1240px;
   background-color: #F7F7F7;
   border-radius: 50px;
-  padding: 5vh;
+  padding: 7vh;
   margin-top: 5vh;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
+  gap: 6vh;
 }
 
 .card {
-  margin-bottom: 40px;
-  border-radius: 20px;
-  width: 300px;
-  height: 300px;
   position: relative;
-  background-color: #FF6060;
-  box-shadow: inset 0px -100px 30px rgba(0, 0, 0, 0.3);
+  width: 330px;
+  height: 330px;
 }
-.card h3 {
+.card .blackGradient {
   position: absolute;
-  bottom: 10px;
+  border-radius: 20px;
+  box-shadow: inset 0px -100px 30px rgba(0, 0, 0, 0.6);
+  width: 330px;
+  height: 330px;
+}
+.card img {
+  z-index: 1;
+  border-radius: 20px;
+  width: 330px;
+  height: 330px;
+  object-fit: cover;
+}
+.card span {
+  z-index: 9;
+  height: 50px;
+  display: block;
+  position: absolute;
+  bottom: 30px;
   left: 20px;
+}
+.card span h3 {
   font-size: 16px;
   font-weight: 100;
   color: white;
