--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -26,7 +26,7 @@
     align-items: center;
 }
 .backBanner{
-    margin-top: 10vh;
+    margin-top: 5vh;
     max-width: 1240px;
     position: relative;
     img{ 
@@ -48,32 +48,46 @@
     }
 }
 .cardsContainer{
-    max-width: 1240px;
     background-color: #F7F7F7 ;
     border-radius: 50px;
-    padding: 5vh;    
+    padding: 7vh;    
     margin-top: 5vh;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
-    
+    gap: 6vh; 
 }
 .card{
-    margin-bottom: 40px;
-    border-radius: 20px;
-    width: 300px;
-    height: 300px;
     position: relative;
-    background-color: #FF6060;
-    box-shadow: inset -0px -100px 30px rgba(0, 0, 0, .3);
-    h3{
+    width: 330px;
+    height: 330px;
+
+    .blackGradient{
         position: absolute;
-        bottom :10px;
+        border-radius: 20px;
+        box-shadow: inset -0px -100px 30px rgba(0, 0, 0, .6);
+        width: 330px;
+        height: 330px;
+    }
+    img{   
+        z-index: 1;
+        border-radius: 20px;
+        width: 330px;
+        height: 330px;
+        object-fit: cover; 
+    
+    }
+    span{
+        z-index: 9;
+        height: 50px;
+        display: block;
+        position: absolute;
+        bottom :30px;
         left: 20px;
-        font-size: 16px;
-        font-weight: 100;
-        color: white;
+        h3{
+            font-size: 16px;
+            font-weight: 100;
+            color: white;
+        }
     }
 }
 .footer{
@@ -83,10 +97,10 @@
     align-items: center;
     margin-top: 5vh;
     padding-top: 20px;
+
     img{
         max-width: 120px ;
-        margin: 20px;
-        
+        margin: 20px; 
     }
     p{
         color: white;
