--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,14 +53,23 @@
   padding: 7vh;
   margin-top: 5vh;
   display: flex;
+  justify-content: center;
+}
+
+.cardAlign {
+  width: 1100px;
+  display: flex;
   flex-wrap: wrap;
-  gap: 6vh;
+  gap: 54px;
 }
 
 .card {
   position: relative;
   width: 330px;
   height: 330px;
+}
+.card :hover {
+  cursor: pointer;
 }
 .card .blackGradient {
   position: absolute;
@@ -79,6 +88,7 @@
 .card span {
   z-index: 9;
   height: 50px;
+  max-width: 250px;
   display: block;
   position: absolute;
   bottom: 30px;
