--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -51,15 +51,23 @@
     background-color: #F7F7F7 ;
     border-radius: 50px;
     padding: 7vh;    
-    margin-top: 5vh;
+    margin-top: 5vh; 
+    display: flex;
+    justify-content: center;
+}
+.cardAlign{
+    width:1100px;
     display: flex;
     flex-wrap: wrap;
-    gap: 6vh; 
+    gap: 54px;
 }
 .card{
     position: relative;
     width: 330px;
     height: 330px;
+    :hover{
+        cursor: pointer;
+    }
 
     .blackGradient{
         position: absolute;
@@ -79,6 +87,7 @@
     span{
         z-index: 9;
         height: 50px;
+        max-width: 250px;
         display: block;
         position: absolute;
         bottom :30px;
@@ -90,6 +99,7 @@
         }
     }
 }
+
 .footer{
     background-color: black;
     display: flex;
