--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,50 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@500;700&family=Neucha&display=swap");
-#root {
-  font-family: "Montserrat", sans-serif;
-  max-width: 1240px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 5vh;
+#starbase img {
+  width: 30px;
+  margin-left: 8px;
+  margin-top: 10px;
 }
 
-.navMenu a {
-  text-decoration: none;
-  color: #FF6060;
-  font-size: 24px;
-  text-transform: uppercase;
-}
-.navMenu :first-child {
-  margin-right: 5vh;
+.star0 :nth-child(n+1) {
+  opacity: 0.4;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
 
-.header {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
+.star1 :nth-child(n+2) {
+  opacity: 0.4;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
 
-.backBanner {
-  margin-top: 5vh;
-  max-width: 1240px;
-  position: relative;
+.star2 :nth-child(n+3) {
+  opacity: 0.4;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
-.backBanner img {
-  z-index: 1;
-  height: auto;
-  border-radius: 20px;
-  filter: brightness(80%);
-  -webkit-filter: brightness(80%);
+
+.star3 :nth-child(n+4) {
+  opacity: 0.4;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
-.backBanner h1 {
-  position: absolute;
-  z-index: 9;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -40%);
-  color: white;
-  font-weight: 200;
-  font-size: 42px;
+
+.star4 :nth-child(n+5) {
+  opacity: 0.4;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+}
+
+.star5 :nth-child(n+6) {
+  opacity: 0.4;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
 
 .cardsContainer {
@@ -98,6 +92,177 @@
   font-size: 16px;
   font-weight: 100;
   color: white;
+}
+
+.cardTop {
+  display: flex;
+  justify-content: space-between;
+}
+.cardTop .profilecard {
+  margin-top: 5px;
+  display: flex;
+}
+.cardTop .profilecard p {
+  margin: 0;
+  max-width: 100px;
+  max-height: 80px;
+  font-size: 16pt;
+  color: #FF6060;
+  text-align: right;
+  margin-right: 20px;
+  margin-top: 14px;
+}
+.cardTop .profilecard .profile {
+  max-height: 80px;
+  border-radius: 600px;
+}
+.cardTop .left ul {
+  display: flex;
+  padding: 0%;
+}
+.cardTop .left li {
+  width: 150px;
+  text-align: center;
+  background-color: #FF6060;
+  border-radius: 20px;
+  margin-right: 20px;
+  padding: 5px;
+  list-style: none;
+  color: white;
+  font-size: 12px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.backBanner {
+  margin-top: 5vh;
+  max-width: 1240px;
+  position: relative;
+}
+.backBanner img {
+  z-index: 1;
+  height: auto;
+  border-radius: 20px;
+  filter: brightness(80%);
+  -webkit-filter: brightness(80%);
+}
+.backBanner h1 {
+  position: absolute;
+  z-index: 9;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  color: white;
+  font-weight: 200;
+  font-size: 42px;
+}
+
+.BannerPage {
+  margin-top: 5vh;
+  margin-bottom: 10px;
+  position: relative;
+  max-width: 1270;
+}
+.BannerPage img {
+  z-index: 1;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.alltexts {
+  display: flex;
+  justify-content: space-between;
+}
+
+.titlExpand {
+  z-index: 2;
+  position: relative;
+  background-color: #FF6060;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+.titlExpand p {
+  color: white;
+  font-size: 18px;
+}
+.titlExpand img {
+  max-height: 20px;
+  vertical-align: middle;
+  transform: rotate(180deg);
+}
+
+.textExpand {
+  z-index: 1;
+  position: relative;
+  transform: translateY(-20px);
+  background-color: #F6F6F6;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  line-height: 25px;
+  color: #FF6060;
+  font-weight: 100;
+}
+.textExpand p {
+  margin: 0;
+  padding: 50px 20px 20px 20px;
+}
+.textExpand ul {
+  margin: 0;
+  list-style: none;
+  padding: 50px 20px 20px 20px;
+}
+
+.half-size {
+  width: 47%;
+}
+
+#root {
+  font-family: "Montserrat", sans-serif;
+  max-width: 1240px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vh;
+}
+
+.navMenu a {
+  text-decoration: none;
+  color: #FF6060;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+.navMenu :first-child {
+  margin-right: 5vh;
+}
+
+.header {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h2 {
+  color: #FF6060;
+  font-weight: 200;
+  font-size: 25pt;
+  margin-bottom: 5px;
+}
+
+h4 {
+  margin-top: 5px;
+  color: #FF6060;
+  font-weight: 200;
+  font-size: 14pt;
 }
 
 .footer {
