--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@500;700&family=Neucha&display=swap');
+@import "./layout/stars";
+@import "./layout/card";
+@import "./layout/cardpage";
+@import "./layout/banners";
+@import "./layout/expand";
 
 #root{
     font-family: 'Montserrat', sans-serif;
@@ -17,7 +22,6 @@
         :first-child{
         margin-right: 5vh;
     }
-
 }
 .header{ 
     display: flex;
@@ -25,79 +29,18 @@
     justify-content: space-between;
     align-items: center;
 }
-.backBanner{
-    margin-top: 5vh;
-    max-width: 1240px;
-    position: relative;
-    img{ 
-        z-index: 1;
-        height: auto;
-        border-radius: 20px;
-        filter: brightness(80%);
-        -webkit-filter: brightness(80%);      
-    }
-    h1{
-        position: absolute;
-        z-index: 9;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -40%);
-        color: white;
-        font-weight: 200;
-        font-size: 42px;
-    }
-}
-.cardsContainer{
-    background-color: #F7F7F7 ;
-    border-radius: 50px;
-    padding: 7vh;    
-    margin-top: 5vh; 
-    display: flex;
-    justify-content: center;
-}
-.cardAlign{
-    width:1100px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 54px;
-}
-.card{
-    position: relative;
-    width: 330px;
-    height: 330px;
-    :hover{
-        cursor: pointer;
-    }
 
-    .blackGradient{
-        position: absolute;
-        border-radius: 20px;
-        box-shadow: inset -0px -100px 30px rgba(0, 0, 0, .6);
-        width: 330px;
-        height: 330px;
-    }
-    img{   
-        z-index: 1;
-        border-radius: 20px;
-        width: 330px;
-        height: 330px;
-        object-fit: cover; 
-    
-    }
-    span{
-        z-index: 9;
-        height: 50px;
-        max-width: 250px;
-        display: block;
-        position: absolute;
-        bottom :30px;
-        left: 20px;
-        h3{
-            font-size: 16px;
-            font-weight: 100;
-            color: white;
-        }
-    }
+h2{
+    color: #FF6060;
+    font-weight: 200;
+    font-size: 25pt;
+    margin-bottom: 5px;
+}
+h4 {
+    margin-top: 5px;
+    color: #FF6060;
+    font-weight: 200;
+    font-size: 14pt;
 }
 
 .footer{
