--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -4,6 +4,7 @@
 @import "./layout/cardpage";
 @import "./layout/banners";
 @import "./layout/expand";
+@import "./layout/404";
 
 #root{
     font-family: 'Montserrat', sans-serif;
