--- a/src/sass/layout/_expand.scss
+++ b/src/sass/layout/_expand.scss
@@ -1,6 +1,8 @@
 .alltexts{
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .titlExpand{
@@ -8,10 +10,10 @@
     position: relative;
     background-color: #FF6060;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-    justify-content: space-between;
     border-radius: 10px;
 
     p{
@@ -21,32 +23,57 @@
     img{
         max-height: 20px;
         vertical-align: middle;
-        transform: rotate(180deg);
+        transform: rotate(0deg);
     }
 }
 .textExpand{
-    z-index: 1;
-    position: relative;
+    color: #FF6060;
+    font-weight: 100;
     transform: translateY(-20px);
     background-color:#F6F6F6 ;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     line-height: 25px;
-        color: #FF6060;
-        font-weight: 100;
+   
     p{
         margin: 0;
-        padding: 50px 20px 20px 20px;
-        
+        padding: 50px 20px 20px 20px;    
     }
     ul{
         margin: 0;
         list-style: none;
         padding: 50px 20px 20px 20px;
-
-
     }
 }
 .half-size{
     width: 47%;
+    height:fit-content;
+}
+.full-size{
+    width: 100%;
+    
+}
+
+.hideText{
+    :first-child{
+        img{
+            transform: rotate(180deg);
+
+        }
+    }
+    .textExpand{
+    transform: translate(0px, -100%);
+    margin-top: -100%;
+    opacity: 0;}
+    margin-bottom: 80px;  
+}
+.hideBlock{
+  img{
+      transform: rotate(180deg);
+  }
+}
+
+.alltexts_about{
+    flex-direction: column;
+    
 }
