--- a/src/css/style.css
+++ b/src/css/style.css
@@ -189,8 +189,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0px 10px;
   border-radius: 10px;
 }
 .titlExpand p {
@@ -207,37 +206,40 @@
   color: #FF6060;
   font-weight: 100;
   transform: translateY(-20px);
-  background-color: #F6F6F6;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
   line-height: 25px;
 }
 .textExpand p {
   margin: 0;
-  padding: 50px 20px 20px 20px;
+  padding: 40px 10px 20px 10px;
+  width: 100%;
+  background-color: #F6F6F6;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
-.textExpand ul {
+.textExpand li {
   margin: 0;
   list-style: none;
-  padding: 50px 20px 20px 20px;
+  padding: 0;
 }
 
-.half-size {
-  width: 47%;
-  height: fit-content;
+.halfsize {
+  gap: 30px;
+}
+.halfsize div {
+  width: 96%;
 }
 
 .full-size {
   width: 100%;
 }
 
-.hideText {
+.hidetext {
   margin-bottom: 80px;
 }
-.hideText :first-child img {
+.hidetext :first-child img {
   transform: rotate(180deg);
 }
-.hideText .textExpand {
+.hidetext .textExpand {
   transform: translate(0px, -100%);
   margin-top: -100%;
   opacity: 0;
@@ -302,6 +304,11 @@ h2 {
   font-weight: 200;
   font-size: 25pt;
   margin-bottom: 5px;
+}
+
+h3 {
+  color: white;
+  font-weight: 300;
 }
 
 h4 {
