--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -37,6 +37,10 @@ h2{
     font-size: 25pt;
     margin-bottom: 5px;
 }
+h3{
+    color: white;
+    font-weight: 300;
+}
 h4 {
     margin-top: 5px;
     color: #FF6060;
