Media queries ok
version mobile ok

To do : lien actif navigation

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@500;700&family=Neucha&display=swap');
+@import "./layout/mediaqueries";
 @import "./layout/stars";
 @import "./layout/card";
 @import "./layout/cardpage";
