--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,6 +130,41 @@
   div.footer {
     margin-top: 100px;
   }
+
+  .sliderImg {
+    height: 355px;
+  }
+
+  img.navArrow {
+    height: 20px;
+    width: 12px;
+  }
+
+  div.arrows {
+    position: relative;
+    z-index: 999;
+    margin-top: -40px;
+    transform: translateY(220px);
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 20px;
+  }
+
+  .hideArrow {
+    height: 20px;
+    width: 12px;
+    opacity: 0;
+    pointer-events: none;
+    cursor: default;
+  }
+
+  .textExpandPage p.textContent {
+    width: auto;
+  }
+
+  .indicator {
+    opacity: 0;
+  }
 }
 #starbase img {
   width: 30px;
@@ -334,13 +369,13 @@
   transform: rotate(0deg);
 }
 
-.textExpand {
+.textExpandPage {
   color: #FF6060;
   font-weight: 100;
   transform: translateY(-20px);
   line-height: 25px;
 }
-.textExpand p {
+.textExpandPage p {
   margin: 0;
   padding: 40px 10px 20px 10px;
   width: 100%;
@@ -348,7 +383,7 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-.textExpand li {
+.textExpandPage li {
   margin: 0;
   list-style: none;
   padding: 0;
@@ -371,7 +406,7 @@
 .hidetext :first-child img {
   transform: rotate(180deg);
 }
-.hidetext .textExpand {
+.hidetext .textExpand, .hidetext .textExpandPage {
   transform: translate(0px, -100%);
   margin-top: -100%;
   opacity: 0;
@@ -383,6 +418,25 @@
 
 .alltexts_about {
   flex-direction: column;
+}
+
+.textExpand {
+  color: #FF6060;
+  font-weight: 100;
+  transform: translateY(-20px);
+  line-height: 25px;
+}
+.textExpand p {
+  margin: 0;
+  padding: 40px 10px 20px 10px;
+  background-color: #F6F6F6;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.textExpand li {
+  margin: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .center {
@@ -406,6 +460,49 @@
   text-decoration: underline;
 }
 
+.slider {
+  position: relative;
+  margin-top: 30px;
+}
+
+.sliderImg {
+  width: 100%;
+  max-height: 355px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.navArrow {
+  position: relative;
+  height: 80px;
+  width: 45px;
+}
+
+.arrows {
+  position: relative;
+  height: 100%;
+  z-index: 999;
+  margin-top: -100px;
+  transform: translateY(250px);
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 20px;
+}
+
+.hideArrow {
+  opacity: 0;
+  pointer-events: none;
+  cursor: default;
+}
+
+.indicator {
+  position: relative;
+  text-align: center;
+  margin-top: -40px;
+  margin-bottom: 40px;
+  color: white;
+}
+
 #root {
   font-family: "Montserrat", sans-serif;
   max-width: 1240px;
@@ -414,6 +511,9 @@
   margin-top: 5vh;
 }
 
+.navMenu {
+  z-index: 9999;
+}
 .navMenu a {
   text-decoration: none;
   color: #FF6060;
