--- a/src/css/style.css
+++ b/src/css/style.css
@@ -158,6 +158,10 @@
     cursor: default;
   }
 
+  .hideText .textExpandPage .textContent {
+    display: none;
+  }
+
   .textExpandPage p.textContent {
     width: auto;
   }
@@ -405,9 +409,6 @@
 }
 .hidetext :first-child img {
   transform: rotate(180deg);
-}
-.hidetext .textExpandPage .textContent {
-  display: none;
 }
 .hidetext .textExpand, .hidetext .textExpandPage {
   transform: translate(0px, -100%);
