--- a/src/sass/layout/_mediaqueries.scss
+++ b/src/sass/layout/_mediaqueries.scss
@@ -145,7 +145,9 @@
         pointer-events: none;
          cursor: default;
      }
-
+    .hideText .textExpandPage .textContent {
+        display: none;
+    }
      .textExpandPage p.textContent{
             width: auto; 
     }
